--- a/index.html
+++ b/index.html
@@ -3,81 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tài liệu học tập</title>
-    <link href="https://fonts.googleapis.com/css2?family=Fobicas&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Fobicas', sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
-
-        header {
-            background-color: #4CAF50; /* Màu xanh lá cây */
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .container {
-            width: 80%;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-
-        h1 {
-            margin-bottom: 20px;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        li {
-            background-color: #4CAF50; /* Màu xanh lá cây */
-            color: white;
-            padding: 15px;
-            margin: 10px 0;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        li:hover {
-            background-color: #45a049; /* Màu xanh lá cây đậm hơn khi di chuột */
-        }
-
-        a {
-            color: white;
-            text-decoration: none;
-            display: block;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <title>Trang web hỗ trợ học tập</title>
+    <link rel="stylesheet" href="style.css"> <!-- Kiểm tra liên kết đúng -->
 </head>
 <body>
+    <!-- Phần Logo -->
+    <header>
+        <div class="logo">
+            <span>F</span>
+            <span class="red-square">o</span>
+            <span>bic</span>
+        </div>
+    </header>
 
-<header>
-    <h1>Tài liệu học tập</h1>
-</header>
+    <!-- Thanh tìm kiếm -->
+    <div class="search-bar">
+        <input type="text" placeholder="Tìm kiếm tài liệu...">
+        <button>Tìm kiếm</button>
+    </div>
 
-<div class="container">
-    <ul>
-        <li><a href="#">Chuyên ngành</a></li>
-        <li><a href="#">Cơ sở và cốt lõi ngành</a></li>
-        <li><a href="#">Khối kiến thức toán và khoa học cơ bản</a></li>
-        <li><a href="#">Kiến thức bổ trợ</a></li>
-        <li><a href="#">Lý luận Chính trị - Pháp luật Đại cương - Giáo dục Quốc Phòng An Ninh</a></li>
-    </ul>
-</div>
+    <!-- Các mục chính -->
+    <div class="menu">
+        <div class="menu-item" id="bf1">BF1</div>
+        <div class="menu-item" id="bf2">BF2</div>
+        <div class="menu-item" id="bf-e12">BF-E12</div>
+        <div class="menu-item" id="bf-e19">BF-E19</div>
+    </div>
 
+    <script src="script.js"></script>
 </body>
 </html>
