--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang web hỗ trợ học tập</title>
-    <link rel="stylesheet" href="style.css"> <!-- Kiểm tra liên kết đúng -->
+    <link rel="stylesheet" href="style.css"> <!-- Kết nối tới file style.css -->
 </head>
 <body>
     <!-- Phần Logo -->
@@ -30,6 +30,6 @@
         <div class="menu-item" id="bf-e19">BF-E19</div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- Kết nối tới file script.js -->
 </body>
 </html>
